--- a/about.html
+++ b/about.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" />
 <header>
-<h1>Sarah Lambert</h1>
+<h2>Sarah Lambert</h2>
 <nav>
   <ul>
     <li><a href="index.html">Accueil</a></li>
@@ -17,7 +18,7 @@
 <title>sarahlambert</title>
 </head>
 <body>
-<img src="img/photoprofil.jpeg" alt="Photo de profil" width="150" height="150" />
+<img src="img/photoprofil.jpeg" alt="Photo de profil" width="200" height="200" />
 <h1>À propos de moi</h1>
 <br>
 <p>Je suis Sarah, ravie de vous rencontrer ! <br>Je suis une aspirante développeuse web, me concentrant sur les langages HTML, CSS et JavaScript. <br> Après plusieurs échecs dans le milieu du travail, et suite a de nombreux questionnement au sujet de mon potentiel autisme et mon intérêt pour l'informatique et la technologie, j'ai décidé de me remettre au développement web. Mon ambition est simple: trouver un emploi entièrement à distance, qui puisse allier ce que j'aime faire et de pas avoir à me préoccuper de cotoyer des gens tout le temps ! </p>
