--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" />
 <header>
-<h1>Sarah Lambert</h1>
+<h2>Sarah Lambert</h2>
 <nav>
   <ul>
     <li><a href="index.html">Accueil</a></li>
