--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+  <h2>Sarah Lambert</h2>
 <nav>
   <ul>
     <li><a href="index.html">Accueil</a></li>
@@ -16,7 +17,7 @@
      <li><a href="contact.html">Me contacter</a></li>
   </ul>
 </nav>
-    <h1>Me Contacter</h1>
+ 
   </header>
 <title>sarahlambert</title>
   <main>
